--- a/games.html
+++ b/games.html
@@ -489,6 +489,7 @@
 [43V] Cel Damage HD $3
 [4] Chambara $4
 [4] Clustertruck $6
+[4] Control $12
 [43V] Cosmophony $2
 [3] Counter-Strike: Global Offensive $7
 [4] Dear Esther $3
