--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ a:focus:before {
 <ul>
 	<li><a href="https://ojito.cam/"><span>ojito</span> 📷</a></li>
 	<li><a href="https://staging.bsky.app/profile/ojito.cam"><span>bsky</span> 🦋</a></li>
-	<li><a href="https://www.etsy.com/shop/ntifa"><span>etsy</span> 🌙</a></li>
+	<li><a href="https://www.etsy.com/shop/OjiCamera"><span>etsy</span> 🌙</a></li>
 </ul>
 <ul>
 	<li><a href="https://www.instagram.com/modestmaoist/">🫥 <span>insta</span></a></li>
