--- a/index.html
+++ b/index.html
@@ -101,16 +101,14 @@ a:focus:before {
 
 <h2>ALEX 洪</h2>
 <ul>
-	<li><a href="https://ojito.cam/"><span>ojito</span> 📷</a></li>
-	<li><a href="https://staging.bsky.app/profile/ojito.cam"><span>bsky</span> 🦋</a></li>
-	<li><a href="https://www.etsy.com/shop/OjiCamera"><span>etsy</span> 🌙</a></li>
+	<li><a href="https://www.instagram.com/modestmaoist/"><span>instagram</span></a></li>
+	<li><a href="https://www.facebook.com/alex.hong/"><span>facebook</span></a></li>
 </ul>
 <ul>
-	<li><a href="https://www.instagram.com/modestmaoist/">🫥 <span>insta</span></a></li>
-	<li><a href="https://www.facebook.com/alex.hong/">🐸 <span>face</span></a></li>
-	<!-- <li><a href="https://grabr.io/es/users/558064">📦 <span>grabr</span></a></li> -->
-	<li><a href="https://offerup.com/p/86128331">🏷️ <span>offerup</span></a></li>
+	<li><a href="https://ojito.cam/"><span>ojito.cam</span></a></li>
+	<li><a href="https://offerup.com/p/86128331"><span>offerup</span></a></li>
 </ul>
+
 
 <script>
 var hash = window.location.hash.substr(1);
