--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1">
-<title>[ᴇɴᴛʀᴇɢᴀʟᴇx]</title>
+<title>Alex 洪</title>
 <style>
 /* rubik-regular - latin */
 @font-face {
@@ -46,6 +46,7 @@ body.light {
 
 h2 {
 	text-align: center;
+	padding-right: 20px;
 }
 
 ul {
@@ -61,7 +62,6 @@ ul+ul {
 a {
 	display: block;
 	color: inherit;
-	text-decoration: none;
 	padding: 0 0.5em;
 }
 
