--- a/games.html
+++ b/games.html
@@ -12,13 +12,18 @@
 <body id="owned">
 
 <div id="plus2"><header><b>Plus</b> <span>(2021-22)</span></header><pre>
+[54] Alan Wake Remastered
 [4] Ark: Survival Evolved
 [4] Call of Duty: Black Ops 4
+[54] Call of Duty: Black Ops Cold War
 [4] Days Gone
+[54] Death's Door
 [54] Deep Rock Galactic
 [5] Destruction AllStars
 [54] Dirt 5
+[4] Dreams
 [4] EA Sports UFC 4
+[54] Endling: Extinction Is Forever
 [4] Farpoint
 [4] Final Fantasy VII Remake
 [54] First Class Trouble
@@ -38,6 +43,7 @@
 [5] Overcooked: All You Can Eat!
 [4] Persona 5 Strikers
 [4] PGA Tour 2K21
+[54] PGA Tour 2K23
 [5] A Plague Tale: Innocence
 [5] Planet Coaster
 [4] Plants vs. Zombies: Battle for Neighborville
