--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ a:focus:before {
 </ul>
 <ul>
 	<li><a href="https://ojito.cam/"><span>ojito.cam</span></a></li>
-	<li><a href="https://offerup.com/p/86128331"><span>offerup</span></a></li>
+	<li><a href="https://www.mercari.com/u/556260114/"><span>mercari</span></a></li>
 </ul>
 
 
