--- a/index.html
+++ b/index.html
@@ -46,17 +46,10 @@ body.light {
 
 h2 {
 	text-align: center;
-	padding-right: 20px;
 }
 
 ul {
-	width: 50%;
-	float: left;
-	text-align: right;
-}
-
-ul+ul {
-	text-align: left;
+	text-align: center;
 }
 
 a {
@@ -101,14 +94,10 @@ a:focus:before {
 
 <h2>ALEX 洪</h2>
 <ul>
+	<li><a href="https://ojito.cam/"><span>ojito.cam</span></a></li>
 	<li><a href="https://www.instagram.com/modestmaoist/"><span>instagram</span></a></li>
 	<li><a href="https://www.facebook.com/alex.hong/"><span>facebook</span></a></li>
 </ul>
-<ul>
-	<li><a href="https://ojito.cam/"><span>ojito.cam</span></a></li>
-	<li><a href="https://www.mercari.com/u/556260114/"><span>mercari</span></a></li>
-</ul>
-
 
 <script>
 var hash = window.location.hash.substr(1);
