--- a/games.html
+++ b/games.html
@@ -27,6 +27,7 @@
 [4] Farpoint
 [4] Final Fantasy VII Remake
 [54] First Class Trouble
+[4] Generation Zero
 [5] Ghostrunner
 [54] Godfall: Challenger Edition
 [4] Hitman 2
@@ -49,6 +50,7 @@
 [4] Plants vs. Zombies: Battle for Neighborville
 [4] Predator: Hunting Grounds
 [4] Remnant: From the Ashes
+[54] Saints Row
 [4] Star Wars: Squadrons
 [4] Team Sonic Racing
 [4] Tennis World Tour 2
