--- a/games.html
+++ b/games.html
@@ -34,6 +34,7 @@
 [5] Hell Let Loose
 [54] Hunter's Arena: Legends
 [4] Kingdoms of Amalur: Re-Reckoning
+[54] Lego 2K Drive
 [4] Lego DC Super-Villains
 [54] Knockout City
 [5] Maquette
@@ -43,6 +44,7 @@
 [5] Operation: Tango
 [5] Overcooked: All You Can Eat!
 [4] Persona 5 Strikers
+[54] Powerwash Simulator
 [4] PGA Tour 2K21
 [54] PGA Tour 2K23
 [5] A Plague Tale: Innocence
@@ -50,6 +52,7 @@
 [4] Plants vs. Zombies: Battle for Neighborville
 [4] Predator: Hunting Grounds
 [4] Remnant: From the Ashes
+[5] Sable
 [54] Saints Row
 [4] Star Wars: Squadrons
 [4] Team Sonic Racing
