--- a/games.html
+++ b/games.html
@@ -11,7 +11,7 @@
 
 <body id="owned">
 
-<div id="plus2"><header><b>Plus</b> <span>(2021-23)</span></header><pre>
+<div id="plus2"><header><b>Plus</b> <span>(2021–24)</span></header><pre>
 [54] Alan Wake Remastered
 [4] Ark: Survival Evolved
 [4] Call of Duty: Black Ops 4
@@ -508,6 +508,7 @@
 [3] Echochrome $1
 [3] Enslaved: Odyssey to the West $5
 [4] Everybody's Gone to the Rapture $8
+[54] Evil West
 [3] Far Cry 3 $5
 [3] Far Cry 3: Blood Dragon $4
 [43] Fibbage $2
@@ -548,6 +549,7 @@
 [V] Need for Speed: Most Wanted $5
 [4] Never Alone $4
 [4V] Nidhogg $5
+[54] Nobody Saves the World
 [3] Noby Noby Boy $1
 [3] Okami $7
 [43V] OlliOlli $3
