--- a/games.html
+++ b/games.html
@@ -574,6 +574,7 @@
 	Prince of Persia: The Two Thrones
 [3] Prince of Persia: The Forgotten Sands $4
 [3] Red Dead Redemption $14
+[4] Red Dead Redemption 2 $20
 [43V] Resogun
 [3] Sam & Max: Beyond Time and Space $1
 [3] Sam & Max: The Devil's Playhouse $1
