--- a/games.html
+++ b/games.html
@@ -27,6 +27,7 @@
 [4] Farpoint
 [4] Final Fantasy VII Remake
 [54] First Class Trouble
+[54] Foamstars
 [4] Generation Zero
 [5] Ghostrunner
 [54] Godfall: Challenger Edition
@@ -52,9 +53,11 @@
 [4] Plants vs. Zombies: Battle for Neighborville
 [4] Predator: Hunting Grounds
 [4] Remnant: From the Ashes
+[54] Rollerdrome
 [5] Sable
 [54] Saints Row
 [4] Star Wars: Squadrons
+[5] Steelrising
 [4] Team Sonic Racing
 [4] Tennis World Tour 2
 [4] Tiny Tina's Assault on Dragon Keep
