--- a/games.html
+++ b/games.html
@@ -25,6 +25,7 @@
 [4] EA Sports UFC 4
 [54] Endling: Extinction Is Forever
 [4] Farpoint
+[54] F1 23
 [4] Final Fantasy VII Remake
 [54] First Class Trouble
 [54] Foamstars
@@ -33,6 +34,7 @@
 [54] Godfall: Challenger Edition
 [4] Hitman 2
 [5] Hell Let Loose
+[54] Hello Neighbor 2
 [54] Hunter's Arena: Legends
 [4] Kingdoms of Amalur: Re-Reckoning
 [54] Lego 2K Drive
@@ -56,6 +58,7 @@
 [54] Rollerdrome
 [5] Sable
 [54] Saints Row
+[54] Sifu
 [4] Star Wars: Squadrons
 [5] Steelrising
 [4] Team Sonic Racing
